dist/docs/3.0.0-beta.3/media-buy/product-discovery/index.mdx
---
title: Product Discovery
sidebarTitle: Overview
description: Discover advertising inventory using natural language briefs and understand product structures for campaign planning.
keywords: [product discovery, natural language briefs, advertising inventory, campaign planning, media products]
---


Product discovery is the foundation of AdCP media buying. Use natural language to describe your campaign goals and discover relevant advertising inventory that matches your requirements.

AdCP's product discovery revolutionizes how advertising inventory is found and evaluated:

- **Natural Language First**: Describe campaigns in plain English instead of navigating complex catalogs
- **AI-Powered Matching**: Advanced algorithms match briefs to relevant inventory
- **Format-Aware Discovery**: Products include creative format compatibility
- **Principal-Specific Results**: See inventory based on your access and negotiated deals

## The Discovery Process

### 1. Write Your Brief
Start with a natural language description of your campaign objectives:

*"Mike's Plumbing Services needs to reach homeowners in the Denver, Colorado area who might need plumbing services. We have $8,000 USD to spend from October 15-31, 2024. Looking for display and native formats to drive phone calls."*

### 2. Discover Products  
Use [`get_products`](/dist/docs/3.0.0-beta.3/media-buy/task-reference/get_products) to find matching inventory based on your brief and promoted offering.

### 3. Evaluate Results
Review returned products for:
- **Audience alignment** with your target customers
- **Format compatibility** with your creative assets
- **Pricing model** (fixed CPM vs auction-based)
- **Delivery type** (guaranteed vs non-guaranteed)
- **Delivery forecasts** on proposals to estimate expected impressions, reach, and spend

### 4. Refine and Iterate
Adjust your brief or add structured filters to find the perfect inventory match.

### 5. Work with Proposals
Publishers may return **proposals** alongside products—structured media plans with budget allocations. Refine proposals conversationally ("focus more on mobile") and execute them directly. See [Proposals](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/media-products#proposals).

## Key Concepts

### Natural Language Briefs
AdCP accepts campaign descriptions in conversational English rather than requiring:
- ❌ Product catalog navigation
- ❌ Technical targeting syntax  
- ❌ Platform-specific terminology

Instead, describe your campaign naturally:
- ✅ "Premium sports fans for energy drink launch"
- ✅ "Local restaurant targeting dinner rush commuters"
- ✅ "B2B software for marketing managers"

Learn more in [Brief Expectations](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/brief-expectations).

### Product Model
Products represent sellable advertising inventory with:
- **Audience targeting** built into the product definition
- **Creative format requirements** for asset compatibility
- **Pricing structure** (fixed rates or auction guidance)
- **Delivery characteristics** (guaranteed reach vs best-effort)

Understand the complete product structure in [Media Products](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/media-products).

### Format Discovery Integration
Product discovery works hand-in-hand with creative planning:

1. **Products return format IDs** for required creative specifications
2. **Use [`list_creative_formats`](/dist/docs/3.0.0-beta.3/media-buy/task-reference/list_creative_formats)** to get detailed format requirements
3. **Plan creative production** based on discovered format needs

## Brief Examples & Patterns

Real-world examples of effective briefs for different campaign types:

- **Local Business**: Service area, customer demographics, business outcomes
- **E-commerce**: Product categories, shopping behaviors, conversion goals  
- **B2B**: Job titles, company characteristics, lead generation
- **Brand Awareness**: Lifestyle attributes, media consumption, reach objectives

Explore comprehensive examples in [Example Briefs](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/example-briefs).

## Discovery Best Practices

### Effective Brief Writing
- **Be specific about your business** and what you're promoting
- **Describe your ideal customer** rather than demographic codes
- **Include geographic scope** and any location relevance
- **Mention format preferences** if you have creative constraints
- **State business objectives** (calls, visits, sales, awareness)

### Iterative Discovery
- Start with a broad brief to explore available inventory
- Use structured filters to narrow results by delivery type or pricing
- Experiment with different customer descriptions to find new opportunities
- Save successful brief patterns for future campaigns

### Working with Results
- Review all returned products for unexpected opportunities
- Check format requirements before creative production
- Consider mix of guaranteed and non-guaranteed inventory
- Evaluate pricing guidance for budget planning

## Response Times

Product discovery operations:
- **[`get_products`](/dist/docs/3.0.0-beta.3/media-buy/task-reference/get_products)**: ~60 seconds (AI processing)
- **[`list_creative_formats`](/dist/docs/3.0.0-beta.3/media-buy/task-reference/list_creative_formats)**: ~1 second (database lookup)

## Next Steps

After discovering products:
1. **[Create Media Buy](/dist/docs/3.0.0-beta.3/media-buy/media-buys/)** - Build campaigns from selected products
2. **[Creative Planning](/dist/docs/3.0.0-beta.3/media-buy/creatives/)** - Prepare assets matching format requirements
3. **[Task Reference](/dist/docs/3.0.0-beta.3/media-buy/task-reference/)** - Detailed API documentation for implementation

## Related Documentation

- **[Brief Expectations](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/brief-expectations)** - Comprehensive guide to brief structure
- **[Example Briefs](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/example-briefs)** - Real-world campaign brief patterns
- **[Media Products](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/media-products)** - Understanding product model and attributes
- **[Proposals](/dist/docs/3.0.0-beta.3/media-buy/product-discovery/media-products#proposals)** - Structured media plans with conversational refinement
- **[`get_products` Task](/dist/docs/3.0.0-beta.3/media-buy/task-reference/get_products)** - Complete API reference